--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ main {
     width: 45vw;
     overflow: hidden;
     border-radius: 2rem;
-    margin-top: 1rem;
+    
 }
 
 
@@ -85,4 +85,26 @@ main ul img {
 
 #tracklist ul li {
     color: gray;
+}
+
+#playstore {
+    width: 70%;
+    display: grid;
+    grid-template-columns: 10% 10% 10% 70%;
+
+}
+
+#playstore img {
+    width: 2rem;
+    cursor: pointer;
+}
+
+#playstore img:nth-child(2) {
+    height: 2rem;
+    padding: 0 0.1rem;
+}
+
+#playstore span {
+    background-color: #e3e3e3;
+    border-radius: 0.5rem;
 }
