--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ main ul img {
 #playstore {
     width: 70%;
     display: grid;
-    grid-template-columns: 10% 10% 10% 70%;
+    grid-template-columns: 10% 10% 10% 55% 15%;
 
 }
 
@@ -104,7 +104,25 @@ main ul img {
     padding: 0 0.1rem;
 }
 
-#playstore span {
+#playstore #trackLength {
     background-color: #e3e3e3;
     border-radius: 0.5rem;
+    overflow: hidden;
+
+}
+
+#playstore #progressBar {
+    background-color: #b3b3b3;
+    height: 100%;
+    width: 0;
+    
+}
+
+#playstore  #time {
+    background-color: white;
+    display: grid;
+    place-items: center;
+    font-size: 0.7rem;
+    padding-left: 0.5rem;
+   
 }
