--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,50 @@ body {
     padding: 0;
 }
 
+#overlay {
+   visibility: hidden;
+    position: fixed;
+    
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 1000;
+}
+
+
+#overlay #close img {
+    width: 1.5rem;
+    position: absolute;
+    right: 0;
+    padding: 2rem;
+    cursor: pointer;
+}
+
+#navigate {
+    display: grid;
+    place-items: center;
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    
+}
+
+#navigate ul {
+    list-style: none;
+    font-size: 3rem;    
+    text-align: center;
+    line-height: 5rem;
+    cursor: pointer;
+}
+
+#navigate ul li:hover {
+    font-weight: bold;
+}
+
 
 nav {
     text-align: center;
