--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,11 @@ body {
     font-weight: bold;
 }
 
+#navigate ul a {
+    text-decoration: none;
+    color: #000
+}
+
 #icons {
     width: 20%;
     display: flex;
@@ -104,6 +109,7 @@ main {
 
 
 
+
 #content h1 {
     padding: 0;
     margin: 0;
@@ -112,6 +118,51 @@ main {
 #content {
     background-image: url(../images/takeoffobit.jpg.webp);
     background-size: cover;
+}
+
+
+#content-about {
+    background-color: #f0f0f0;
+    color: #fff;
+    
+    height: 45vh;
+    width: 45vw;
+    overflow: hidden;
+    border-radius: 2rem;
+    
+}
+
+#content-about.new-bg {
+    background-color: #242424; /* replace with the new color you want */
+}
+
+#top-content {
+    display: grid;
+    place-items: center;
+   width: 80%;
+   margin: 0 auto;
+   color: #000;
+   padding: 2rem 0;
+   text-align: justify;
+   line-height: 1.2rem;
+}
+
+
+#top-content img {
+  
+    width: 10rem;
+    border-radius: 1rem;
+    
+}
+
+#top-content p {
+    padding: 0.5rem 0;
+}
+
+
+
+#top-content.new-color {
+    color: #fff; /* replace with the new color you want */
 }
 
 main ul {
