--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@ body {
     padding: 0;
 }
 
+
+body.black-background ul li {
+    color: white;
+}
+
+
 #overlay {
    visibility: hidden;
     position: fixed;
@@ -104,7 +110,26 @@ main {
     width: 45vw;
     overflow: hidden;
     border-radius: 2rem;
-    
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+
+#content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    transition: left 1s ease-in-out;
+}
+
+#content.slide::before {
+    left: 0;
 }
 
 
@@ -115,10 +140,7 @@ main {
     margin: 0;
 }
 
-#content {
-    background-image: url(../images/takeoffobit.jpg.webp);
-    background-size: cover;
-}
+
 
 
 #content-about {
